--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ function myMenuFunction(){
     }
   
     function navigateToLink3() {
-      window.location.href = 'https://drive.google.com/file/d/1oi3dTWezlqaNKtU3AulK0iYILcaEyIyO/view?usp=drive_link';
+      window.location.href = 'https://drive.google.com/file/d/1_kif458Uf3wfSB1DdSY3aX1VaNE349Da/view?usp=sharing';
     }
   
       function navigateToLink4() {
